force-app/main/default/objects/Market_Segment_Criteria__mdt.object
<CustomObject>
    <fields>
        <fullName>Age_High__c</fullName>
        <label>Age-High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Low__c</fullName>
        <label>Age-Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Date_Range_High__c</fullName>
        <label>Transition Date Range-High</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_Date_Range_Low__c</fullName>
        <label>Transition Date Range-Low</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Market Segment Criteria</label>
    <pluralLabel>Market Segment Criterias</pluralLabel>
</CustomObject>